--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,15 @@
     "files.associations": {
         "vector": "cpp",
         "iosfwd": "cpp",
-        "utility": "cpp"
-    }
+        "utility": "cpp",
+        "deque": "cpp",
+        "string": "cpp"
+    },
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "/Users/p.gatt/Documents/2A/autre/SIM202/git_SIM202/SIM202",
+            "binaryPath": "/Users/p.gatt/Documents/2A/autre/SIM202/git_SIM202/SIM202/main",
+            "binaryArgs": []
+        }
+    ]
 }
