--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,11 @@
             "cwd": "/Users/p.gatt/Documents/2A/autre/SIM202/git_SIM202/SIM202",
             "binaryPath": "/Users/p.gatt/Documents/2A/autre/SIM202/git_SIM202/SIM202/main",
             "binaryArgs": []
+        },
+        {
+            "cwd": "/Users/p.gatt/Documents/2A/autre/SIM202/Git_SIM202/SIM202",
+            "binaryPath": "/Users/p.gatt/Documents/2A/autre/SIM202/Git_SIM202/SIM202/main",
+            "binaryArgs": []
         }
     ]
 }
